@@ -4,13 +4,13 @@
 rra-appointment-from-vevent, rra-appointment-to-vevent, rra-contact-from-vcard, rra-contact-to-vcard, rra-decode, rra-delete, rra-get-data, rra-get-ids, rra-get-recurring-appointments, rra-get-types, rra-put-data, rra-subscribe, rra-task-from-vtodo, rra-task-to-vtodo, rra-timezone \- Tools for manipulating the WinCE Database
 
 .SH SYNOPSIS
-\fBrra-appointment-from-vevent\fR [-c \fICODEPAGE\fR] \fIVEVENT_FILE\fR \fIAPPOINTMENT_FILE\fR
+\fBrra-appointment-from-vevent\fR [-d \fILEVEL\fR] [-c \fICODEPAGE\fR] \fIVEVENT_FILE\fR \fIAPPOINTMENT_FILE\fR
  
-\fBrra-appointment-to-vevent\fR [-c \fICODEPAGE\fR] [-t \fITZFILE\fR] \fIAPPOINTMENT_FILE\fR [\fIVEVENT_FILE\fR]
+\fBrra-appointment-to-vevent\fR [-d \fILEVEL\fR] [-c \fICODEPAGE\fR] [-t \fITZFILE\fR] \fIAPPOINTMENT_FILE\fR [\fIVEVENT_FILE\fR]
 
-\fBrra-contact-from-vcard\fR [-c \fICODEPAGE\fR] \fIVCARD_FILE\fR \fICONTACT_FILE\fR
+\fBrra-contact-from-vcard\fR [-d \fILEVEL\fR] [-c \fICODEPAGE\fR] \fIVCARD_FILE\fR \fICONTACT_FILE\fR
 
-\fBrra-contact-to-vcard\fR [-c \fICODEPAGE\fR] \fICONTACT_FILE\fR [\fIVCARD_FILE\fR]
+\fBrra-contact-to-vcard\fR [-d \fILEVEL\fR] [-c \fICODEPAGE\fR] \fICONTACT_FILE\fR [\fIVCARD_FILE\fR]
 
 \fBrra-decode\fR \fIFILE\fR
 
@@ -28,9 +28,9 @@ rra-appointment-from-vevent, rra-appointment-to-vevent, rra-contact-from-vcard, 
 
 \fBrra-subscribe\fR [\fITYPE-ID\fR] [\fITYPE-ID\fR] ...
 
-\fBrra-task-from-vtodo\fR [-c \fICODEPAGE\fR] [-t \fITZFILE\fR] \fIVTODO_FILE\fR \fITASK_FILE\fR
+\fBrra-task-from-vtodo\fR [-d \fILEVEL\fR] [-c \fICODEPAGE\fR] [-t \fITZFILE\fR] \fIVTODO_FILE\fR \fITASK_FILE\fR
 
-\fBrra-task-to-vtodo\fR [-c \fICODEPAGE\fR] \fITASK_FILE\fR [\fIVTODO_FILE\fR]
+\fBrra-task-to-vtodo\fR [-d \fILEVEL\fR] [-c \fICODEPAGE\fR] \fITASK_FILE\fR [\fIVTODO_FILE\fR]
 
 \fBrra-timezone\fR [\-d \fILEVEL\fR] [\-h] [\-i \fIINPUT-FILE\fR]
 [\-o \fIOUTPUT-FILE\fR] [\-b] [\-r] [\-v]
